--- a/UI/Base.lproj/Main.storyboard
+++ b/UI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pQj-mP-Pll">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--People Pairer-->
         <scene sceneID="1em-Hr-wcZ">
             <objects>
                 <tableViewController id="ce7-6g-KxV" customClass="PeopleTableViewController" customModule="People_Pairer" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="ce7-6g-KxV" id="ds2-Eo-mbG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="IKK-Iu-CL6">
+                    <navigationItem key="navigationItem" title="People Pairer" id="IKK-Iu-CL6">
                         <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="fkd-7J-BFW">
                             <connections>
                                 <action selector="randomizePeopleButtonTapped:" destination="ce7-6g-KxV" id="KJq-jb-VJa"/>
